CSS Not Applying Correctly, Causing Layout Problems

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1183,7 +1183,7 @@ body {
   /* margin-inline: 15px; */
   background-color: var(--eerie-black-3);
   padding: 20px;
-
+}
 .footer-container {
   display: flex;
   flex-wrap: wrap;
@@ -2199,7 +2199,7 @@ h1 {
   margin: 0;
 }
 
-p.faq_1 {
+.p.faq_1 {
   font-size: 50px;
   color: #000;
   text-align: center;
